# Nexlifycorp

./: .env.example  .gitignore  .graphifyignore  =0.3.0  AGENTS.md  CLAUDE.md  CONTEXT.md  PROGRESSION.md  README.md  feature-list.json  langgraph.json  main.py  pyproject.toml  pytest.ini
.cursor/hooks/state/: continual-learning.json
.pi/: settings.json
.pi/agents/: clean-architecture-engineer.md
data/: .ingestion_manifest.json
data/internal/: NexlifyCorp-Company-Overview.md
data/internal/board-memos/: 2025-Q4-Board-Presentation-Executive-Summary.md
data/internal/competitor-analyses/: 2025-Q2-Competitor-Analysis-NVIDIA-AMD.md
data/internal/earnings-prep/: 2025-Q4-Earnings-Preparation-Notes.md
docs/: adr-rules.md  architecture.md  feature-rules.md  progression-rules.md
docs/adr/: ADR-001-unified-chunk-type.md  ADR-002-qdrant-selection.md  ADR-003-qdrant-critical-analysis.md  ADR-004-ingestion-pipeline-orchestrator.md  ADR-005-ontology-enrichment.md  ADR-006-corrective-rag-loop.md
docs/plans/: 2026-05-19-chunking-strategy.md  2026-06-02-risk-intelligence-qa-agent.md  slm-ontology-plan.md
frontend/: package.json
frontend/scripts/: start.sh
frontend/src/app/: layout.tsx
notebooks/: agent_node_testing.ipynb  end_to_end_testing.ipynb  local_embeddings_pipeline.ipynb  risk_qa_agent_testing.ipynb  test_ontology.ipynb
scripts/: config.py  download_public_filings.py  ingest.py  paths.py  sec_client.py  test_agent.py  test_ontology.py
src/agents/: __init__.py  prompts.py  retrieval_agent.py  tools.py
src/core/: __init__.py  config.py  embeddings.py  llm.py  vector_store.py
src/ingestion/: __init__.py  chunk_builder.py  ingestion_pipeline.py  internal_doc_processor.py  manifest.py  ontology_enricher.py  sec_filing_extractor.py  types.py
src/retrieval/: __init__.py  filter_builder.py  retriever.py
src/utils/: __init__.py  logger.py  text_cleaner.py
tests/: conftest.py
tests/integration/: test_retriever_integration.py
tests/mock/: __init__.py
tests/unit/: test_auto_ingest_cli.py  test_ingest_cli.py  test_ingestion_manifest.py  test_ingestion_pipeline.py  test_internal_chunker.py  test_internal_doc_processor.py  test_manifest.py  test_retrieval_agent.py  test_retriever.py  test_risk_qa_agent.py  test_sec_chunker.py  test_sec_filing_extractor.py  test_vector_store.py
(+67 files in other folders)
