[project]
name = "nexlifycorp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "edgartools>=5.31.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "sec-edgar-downloader>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
