[project]
name = "nexlifycorp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.0",
    "edgartools>=5.31.3",
    "langchain-anthropic>=1.4.3",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.1",
    "langgraph-cli>=0.4.26",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "sec-edgar-downloader>=5.0.0",
    # Sentence transformers (CPU only)
    "sentence-transformers>=5.5.0",
]

[dependency-groups]
dev = [
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
]

# Use PyTorch CPU-only from their index
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "pytorch-cpu"
default = false

[tool.uv]
# Allow all indexes for package resolution
index-strategy = "unsafe-best-match"
